楼楼商城api项目初始化

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/mall_db?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
     username: root
-    password: abc.123
+    password: root
     hikari:
       maximum-pool-size: 15
       minimum-idle: 5
@@ -18,4 +18,4 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   configuration:
-  map-underscore-to-camel-case: true
+    map-underscore-to-camel-case: true
